--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
     </div>
 
     
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.4.slim.js" integrity="sha256-dWvV84T6BhzO4vG6gWhsWVKVoa4lVmLnpBOZh/CAHU4=" crossorigin="anonymous"></script>    
-    <!-- JS  -->
+<!-- jQuery -->
+<script
+  src="https://code.jquery.com/jquery-3.6.4.js"
+  integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+  crossorigin="anonymous"></script>
+<!-- JS  -->
 <script src="index.js" charset="UTF-8"></script>    
 </body>
 </html>
